# ucd-csi2312-pa2

./: CMakeLists copy.txt  CMakeLists.txt  Cluster copy.cpp  Cluster copy.h  Cluster.cpp  Cluster.h  DimensionalityMismatchEx.cpp  DimensionalityMismatchEx.h  KMeans.cpp  KMeans.h  OutOfBoundsEx.cpp  OutOfBoundsEx.h  Point copy.cpp  Point copy.h  Point.cpp  Point.h  RemoveFromEmptyEx.cpp  RemoveFromEmptyEx.h  ZeroClustersEx.cpp  ZeroClustersEx.h  main copy.cpp  main.cpp
